kubernetes/ingress/ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-http
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: myminikube.info
      http:
        paths:
          - path: /
            backend:
              serviceName: rails-nginx
              servicePort: 80
